<resources>
    <string name="app_name" translatable="false">Pran Health</string>
    <string name="select_language" translatable="false">Select Language</string>
    <string name="lan_english" translatable="false">English</string>
    <string name="lan_hindi" translatable="false">हिन्दी</string>
    <string name="lan_marathi" translatable="false">मराठी</string>
    <string name="title" translatable="false"> CORONAVIRUS RISK SCAN </string>


    <string name="question1">Hi! Our coronavirus disease self \n assessment scan has been developed \n on the basis of guidelines from the \n WHO and MOHFW,Governments of India.\n The interaction should not be taken as \n expert medical advice . Any informaton \n you share with us will be kept strictly \n confidential</string>
    <string name="question2">How old are you?</string>
    <string name="optionAge1">below 15</string>
    <string name="optionAge2">15 - 40</string>
    <string name="optionAge3">41 - 60</string>
    <string name="optionAge4">Above 60</string>
    <string name="gender">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Others</string>
    <string name="question3">Please let us know your current body \n temperature in degree Fahrenheit \n (Normal body temperature is 98.6°F):</string>
    <string name="normal">Normal(96°F-98.6°F)</string>
    <string name="fever">Fever(98.6°F-102°F)</string>
    <string name="highfever">High Fever(>102°F)</string>
    <string name="dontknow">Dont Know</string>
    <string name="question4">Are you experiencing any of the \n symptoms below (mark all those \n applicable)</string>
    <string name="drycough">Dry Cough</string>
    <string name="Loss">Loss or diminished sense of smell</string>
    <string name="sorethroat">Sore throat</string>
    <string name="weakness">Weakness</string>
    <string name="change">Change in Appetite</string>
    <string name="question5">Additionally, please verify if you are \n Experiencing any of the symptoms \n below (mark all those applicable)</string>
    <string name="moderatetosevercough">Moderate to Severe Cough</string>
    <string name="Feelingbreathless">Feeling Breathless</string>
    <string name="Difficultyinbreathing">Difficulty in Breathing</string>
    <string name="Drowsiness">Drowsiness</string>
    <string name="Presistantpain">Persistant pain and Pressure in chest</string>
    <string name="severweakness"> Severe weakness </string>
    <string name="noneofthese"> None of these</string>
    <string name="travelhistory"> Please select your travel and exposure \n details</string>
    <string name="notravelhistory"> No travel History</string>
    <string name="nocontactwithanyone"> No contact with anyone with Symptoms</string>
    <string name="historyoftravelormeeting"> History of travel or meeting in affected \n geographical areea in last 14 days</string>
    <string name="closecontact"> Close contact with confirmed COVID in last 14 days</string>
    <string name="historyofcondition"> Do you have history of any of these\n conditions(mark all those applicable)</string>
    <string name="diabtes"> Diabetes</string>
    <string name="highbloodpressure"> High blood Pressure</string>
    <string name="heartdisease"> Heart Disease</string>
    <string name="kidneydisease"> Kidney Disease</string>
    <string name="lungdisease">Asthma</string>
    <string name="stroke">Stroke</string>
    <string name="reducedimmunity"> Reduced Immunity</string>
    <string name="confirm"> Confirm </string>
    <string name="symptomsprogress"> how have your symptoms progressed \n over the last 48 hrs? </string>
    <string name="improved">Improved</string>
    <string name="nochange"> No Change</string>
    <string name="worsened"> Worsened </string>
    <string name="worsenedconsiderably"> Worsened Considerably</string>
    <string name="risk_assasment">Risk Assessment</string>
    <string name="based_on_your_information_we_advise_you_the_following">Based on your information, we advise you the following:</string>
    <string name="info_one">1. Stay home and take care of yourself in home isolation.</string>
    <string name="info_two">2. Laboratory tests and imaging are optional (and as per your physician’s advise)</string>
    <string name="info_three">3. Monitor your symptoms and get medical attention if your situation worsens</string>
    <string name="basic_protective_measures">Basic protective measures</string>
    <string name="measure_descrip">Most people who become infected experience mild illness and recover, but it can be more severe for others. Take care of your health and protect others by doing the following:</string>
    <string name="measure_header_one">Wash your hands frequently</string>
    <string name="measure_descrip_one">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.</string>
    <string name="measure_header_two">Maintain social distancing</string>
    <string name="measure_descrip_two">Maintain at least 2 metre (6 feet) distance between yourself and anyone who is coughing or sneezing.</string>
    <string name="measure_header_three">Avoid touching eyes, nose and mouth</string>
    <string name="measure_descrip_three">Our hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth.</string>
    <string name="measure_header_four">Practice respiratory hygiene</string>
    <string name="measure_descrip_four">Make sure you and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.</string>
    <string name="measure_header_five">If you have fever, cough and difficulty in breathing, seek medical care early</string>
    <string name="measure_descrip_five">Stay home if you feel unwell. If you have a high fever, moderate to severe cough and difficulty in breathing and it is worsening in short period of time, seek medical asistance and call in advance.</string>
    <string name="risk_low">low</string>
    <string name="risk_medium">medium</string>
    <string name="risk_high">high</string>
    <string name="btn_retake">Retake the test</string>
    <string name="select_preferred_language" translatable="false">Select Preferred Language</string>
    <string name="by_pranayu_multispeciality_hospital" translatable="false">by Pranayu Multispeciality Hospital</string>
    <string name="covid_19_risk_assessment_program" translatable="false">COVID-19 Risk Assessment Program</string>
    <string name="your_health_matters_to_us">Your health matters to us.</string>
    <string name="helpline_text">If you have any serious symptoms of COVID-19, click the following number to call the National helpline.</string>
</resources>
