<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFF1EC"
        android:orientation="vertical"
        tools:context=".AssasmentActivity">

        <androidx.cardview.widget.CardView
            style="@style/styleCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/risk_assasment" />

                <TextView
                    android:id="@+id/tvRiskAssasment"
                    style="@style/styleRiskAssasment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="LOW" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/styleCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/based_on_your_information_we_advise_you_the_following" />

                <TextView
                    style="@style/styleAsmtInstruct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_one" />

                <TextView
                    style="@style/styleAsmtInstruct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_two" />

                <TextView
                    style="@style/styleAsmtInstruct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_three" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/styleCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_20dp"
                    android:text="@string/basic_protective_measures" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_15dp"
                    android:text="@string/measure_descrip" />

                <TextView
                    style="@style/styleAsmtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_header_one" />

                <TextView
                    style="@style/styleAsmyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_descrip_one" />

                <TextView
                    style="@style/styleAsmtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_header_two" />

                <TextView
                    style="@style/styleAsmyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_descrip_two" />

                <TextView
                    style="@style/styleAsmtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_header_three" />

                <TextView
                    style="@style/styleAsmyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_descrip_three" />

                <TextView
                    style="@style/styleAsmtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_header_four" />

                <TextView
                    style="@style/styleAsmyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_descrip_four" />

                <TextView
                    style="@style/styleAsmtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_header_five" />

                <TextView
                    style="@style/styleAsmyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_descrip_five" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>