<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/progressLoader"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/covid_green_1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Pran Health"
            android:textColor="@color/textLow"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:gravity="end"
            android:text="@string/by_pranayu_multispeciality_hospital"
            android:textSize="11sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_15dp"
            android:gravity="center"
            android:text="@string/covid_19_risk_assessment_program"
            android:textColor="@color/textMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_preferred_language"
            android:textColor="@color/colorSelected"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10dp"/>

        <LinearLayout
            style="@style/styleLauncherOptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEng"
                style="@style/styleLangOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lan_english" />

            <TextView
                android:id="@+id/tvHindi"
                style="@style/styleLangOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lan_hindi" />

            <TextView
                android:id="@+id/tvMarathi"
                style="@style/styleLangOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lan_marathi" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>